Fix loi z-index HomePage

--- a/css/TranTrungHieu_css/HomePage.css
+++ b/css/TranTrungHieu_css/HomePage.css
@@ -880,6 +880,7 @@ sup {
 	margin-top: 70px;
 	overflow-y: scroll;
 	right: -100%;
+	z-index: 100000000;
 }
 .cart i {
 	cursor: pointer;
